Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37226

Column numbers of signals in Connection objects are wrong

    XMLWordPrintable

Details

    Description

      The column numbers seem to be always reported as 2 by the QV4::Function objects in those instances of QQmlBoundSignalExpression. This is exposed by 2520879f0b58779027589d491eb47e98e0872b5a, which prefers the QV4::Function over the internally kept column number if available. The column numbers kept in the QQmlBoundSignalExpression are correct.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes